# planc

common/: alto_tensor.hpp  bitops.hpp  blco_tensor.hpp  cuda_utils.hpp  ncpfactors.hpp  parsecommandline.h  parsecommandline.hpp  sparse_tensor.hpp  utils.h
nnls/: SortBooleanMatrix.hpp  bppnnls.hpp
ntf/: CMakeLists.txt  auntf.hpp  ntf.cpp  ntfanlsbpp.hpp  ntfaoadmm.hpp  ntfhals.hpp  ntfmu.hpp  ntfnes.hpp  tfucp.hpp
sparse_ntf/: CMakeLists.txt  README.md  auntf_gpu.hpp  ntfanlsbpp_gpu.hpp  ntfaoadmm_gpu.hpp  ntfhals_gpu.hpp  ntfmu_gpu.hpp  profile_cpd.sh  profiling.cpp  sparse_ntf.cpp  testcases.md
sparse_ntf/blcotensor_gpu/: CMakeLists.txt  anlsbpp.cu  aoadmm.cu  blco.cu  bpp.cu  cholesky_helpers.cu  cublas_operations.cu  cuda_utils.cu  hals.cu  matrix_ops.cu  mu.cu  vector_ops.cu
sparse_ntf/blcotensor_gpu/include/: anlsbpp.h  aoadmm.h  blco.h  bpp.h  cholesky_helpers.h  config.h  cublas_operations.h  cuda_utils.h  hals.h  matrix_ops.h  mu.h  vector_ops.h
